# .dotfiles

./: .gitignore  README.md
alacritty/: alacritty.toml  install.sh
bash/: rc.bash
fish/: config.fish  fish_variables  links.prop
gitui/: key_bindings.ron  links.prop  theme.ron
helix/: config.toml  languages.toml  links.prop
helix/themes/: transparent_gruvbox.toml
install/: bootstrap.sh
lvim/: config.lua  links.prop
nushell/: config.nu  env.nu  links.prop  plugin.nu
nushell/plugins/: Cargo.toml
nushell/plugins/nu_plugin_emoji/: Cargo.toml
nushell/plugins/nu_plugin_qr_maker/: Cargo.toml
nushell/plugins/nu_plugin_str_similarity/: Cargo.toml
scripts/: csv2xlsx  links.prop  marco-sys  restart  touchpad-toggle
tmux/: tmux.conf
zellij/: config.kdl  links.prop
zellij/themes/: catppuccin.kdl
