[package]
name = "nu_plugin_emoji"
version = "0.2.0"
authors = ["Darren Schroeder"]
edition = "2021"
repository = "https://github.com/fdncred/nu_plugin_emoji"
description = "a nushell plugin called emoji"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
emojis = "0.6.1"
itertools = "0.12.0"
nu-plugin = "0.91.0"
nu-protocol = "0.91.0"
