[package]
name = "nu_plugin_qr_maker"
license = "MIT"
authors = ["Motalleb Fallahnezhad <fmotalleb@gmail.com>"]
keywords = ["nushell", "qr-code", "plugin"]
homepage = "https://github.com/FMotalleb/nu_plugin_qr_maker"
repository = "https://github.com/FMotalleb/nu_plugin_qr_maker"
description = "A nushell plugin to create qr code in terminal"
version = "1.0.3"
edition = "2021"
readme = "README.md"

[dependencies]
nu-plugin = "0.92.1"
nu-protocol = "0.92.1"
qr2term = { version = "0.3.1" }
